--- a/DanStyleSheet.css
+++ b/DanStyleSheet.css
@@ -5,9 +5,6 @@ div {
     display: block;
 }
 
-img {
-    border: 5px solid white;
-}
 
 .round {
 	border-radius: 50%;
@@ -42,6 +39,7 @@ img {
     font-family: "Raleway-Bold";
 }
 .bold.section-title {
+    color:rgb(43, 158, 255);
     font-size: 200%;
     text-align: center;
 }
@@ -98,7 +96,7 @@ img {
 }
 
 .outer-pad {
-    padding: 100px 100px; 
+    padding: 50px 100px; 
     position: relative;
 }
 
