--- a/materialize.css
+++ b/materialize.css
@@ -2280,13 +2280,12 @@ td, th {
 
 .collection {
   margin: 0.5rem 0 1rem 0;
-  border: 1px solid #e0e0e0;
   border-radius: 2px;
   overflow: hidden;
   position: relative; }
   .collection .collection-item {
     background-color: #fff;
-    line-height: 1.5rem;
+    line-height: auto;
     padding: 10px 20px;
     margin: 0;
     border-bottom: 1px solid #e0e0e0; }
@@ -2308,7 +2307,7 @@ td, th {
         text-align: center; }
       .collection .collection-item.avatar .title {
         font-size: 18px;
-        margin:auto; }
+         }
       .collection .collection-item.avatar p {
         margin: 0; }
       .collection .collection-item.avatar .secondary-content {
