almost done with non-responsive.

--- a/DanStyleSheet.css
+++ b/DanStyleSheet.css
@@ -242,6 +242,8 @@ div {
     padding:0px!important;
 }
 
-.left-job-border {
-    border-right, border-bottom:1px solid black; 
+.about-me {
+    font-size:16px;
 }
+
+.
