--- a/DanStyleSheet.css
+++ b/DanStyleSheet.css
@@ -67,9 +67,7 @@ div {
     text-align: left;
     border-style: solid;
     border-width: 1px;
-    border-color: black;
-    
-    
+    border-color: black;    
 }
 
 .block.blue {
@@ -198,6 +196,10 @@ div {
         height:50px;
         margin:0;
     }
+    .parallax-tag {
+      width:50%!important;
+      top:80%!important;
+    }
 }
 
 @media (max-width: 992px) {
@@ -210,8 +212,9 @@ div {
   .exp-border-right {
     border-right: none!important;
   }
-  .title-font {
-    font-size: 16px;
+  .seal img{
+    max-height: "100"!important;
+    max-width: "100"!important;
   }
 }
 
@@ -224,9 +227,21 @@ div {
   }
 }
 
-@media (max-width: 329px) {
+@media (max-width: 331px) {
   .title-font {
-    font-size: 50px!important
+    font-size: 50px!important;
+  }
+}
+
+@media (max-width: 391px) {
+  .interest-text {
+    font-size: 10px
+  }
+}
+
+@media (max-width: 455px) {
+  .interest-text {
+    font-size:14px!important;
   }
 }
 
@@ -293,3 +308,4 @@ div {
 .title-font {
   font-size: 67px;
 }
+
