--- a/DanStyleSheet.css
+++ b/DanStyleSheet.css
@@ -198,7 +198,7 @@ div {
     }
     .parallax-tag {
       width:50%!important;
-      top:80%!important;
+      top:70%!important;
     }
 }
 
@@ -241,7 +241,7 @@ div {
 
 @media (max-width: 391px) {
   .interest-text {
-    font-size: 10px
+    font-size: 12px!important
   }
 }
 
