--- a/DanStyleSheet.css
+++ b/DanStyleSheet.css
@@ -63,11 +63,8 @@ div {
 .block{
     /* width: 150px, height: auto to retain aspect ratio */
     height: 100%;
-    width: auto;
-    text-align: left;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;    
+    width: 100%;
+    border: 1px solid black
 }
 
 .block.blue {
@@ -76,9 +73,6 @@ div {
 
 .block.white {
     background-color: white;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
 }
 
 .middle {
