--- a/DanStyleSheet.css
+++ b/DanStyleSheet.css
@@ -66,7 +66,8 @@ div {
     /* width: 150px, height: auto to retain aspect ratio */
     height: auto;
     width: 100%;
-    border: 1px solid black
+    border: 1px solid black;
+    position:relative;
 }
 
 .block.blue {
@@ -259,6 +260,33 @@ div {
   border-right:1px solid black;
 }
 
+.background-video {
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.intro-background {
+  position: relative;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  min-width: 25%;
+  min-height: 100%;
+  width: 100%;
+  height: 100%;
+}
 
 .homepage.overlay {
   background-color: rgba(43, 158, 255, 0.7);
