--- a/DanStyleSheet.css
+++ b/DanStyleSheet.css
@@ -347,3 +347,19 @@ div {
   font-size: 67px;
 }
 
+.scroll-img {
+    height: 50px;
+    width: 25px;
+    animation-name:wiggle;
+    animation-duration: 1.2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+}
+
+.scroll-cont {
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    right: 5%;
+}
