--- a/public/css/DanStyleSheet.css
+++ b/public/css/DanStyleSheet.css
@@ -1,5 +1,6 @@
+
 * {
-    font-family:"Raleway";
+    font-family:"Raleway-Bold";
     font-size:14px;
 }
 div {
@@ -26,11 +27,11 @@ div {
 
 @font-face {
     font-family: "Raleway";
-    src: url("Raleway-Thin.ttf");
+    src: url("../fonts/Raleway-Thin.ttf");
 }
 @font-face {
     font-family: "Raleway-Bold";
-    src: url("Raleway-SemiBold.ttf");
+    src: url("../fonts/Raleway-SemiBold.ttf");
 }
 
 .techfont {
@@ -189,8 +190,8 @@ div {
 
 @media (max-width:810px) {
     .category-button {
-        width:125px;
-        height:50px;
+        width:187px;
+        height:75px;
         margin:0;
     }
     .parallax-tag {
